--- a/frontend/nyanpasu/package.json
+++ b/frontend/nyanpasu/package.json
@@ -25,6 +25,7 @@
     "ahooks": "3.8.0",
     "allotment": "1.20.2",
     "axios": "1.7.2",
+    "country-code-emoji": "^2.3.0",
     "dayjs": "1.11.11",
     "framer-motion": "12.0.0-alpha.0",
     "i18next": "23.11.5",
